--- a/app/modules/chooseTeams/styles/chooseTeams.less
+++ b/app/modules/chooseTeams/styles/chooseTeams.less
@@ -24,6 +24,7 @@
     margin-left: 54px;
     padding: 12px;
     border-width: @button-border-width;
+    border-color: #000000;
 }
 
 .choose-teams-carousel {
@@ -65,6 +66,7 @@
 		    text-shadow: none;
 		    border-radius: @app-border-radius;
 		    border-width: @button-border-width;
+		    border-color: #000000;
 		    cursor: pointer;
     	}
 
