Minor fixes/tweaks

--- a/app/modules/chooseTeams/styles/chooseTeams.less
+++ b/app/modules/chooseTeams/styles/chooseTeams.less
@@ -15,7 +15,7 @@
 
 .play-ball-button {
 	background-color: #ffffff;
-    color: #0a4f6f;
+    color: #444444;
     font-size: 25px;
     font-weight: 800;
     font-family: sans-serif;
@@ -61,7 +61,7 @@
 		    font-weight: 600;
 		    font-family: sans-serif;
 		    background-color: #ffffff;
-		    color: #0a4f6f;
+		    color: #444444;
 		    height: 48px;
 		    width: 72px;
 		    letter-spacing: normal;
