--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -260,11 +260,11 @@
   	visibility: hidden;
   	width: auto;
   	background-color: #ffffff;
-  	color: #0a4f6f;
+  	color: #444444;
   	text-align: center;
   	padding: 5px;
   	border-radius: @app-border-radius;
-  	border: 2px solid #0a4f6f;	 
+  	border: 2px solid #444444;	 
   	position: absolute;
   	top: 34px;
   	z-index: 1;
