--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -246,8 +246,8 @@
 }
 
 .player-position {
-	font-size: 12px;
-	padding-top: 4px;
+	font-size: 11px;
+	padding-top: 5px;
 	padding-right: 2px;
 }
 
@@ -358,7 +358,7 @@
 	position: absolute;
 	left: 0px;
     height: 114vh;//long enough to cover the entire slide so that nothing is clickable when modal is showing
-    width: 100%;
+    width: 850px;
     z-index: 3;
 
 	.player-info-modal {
@@ -419,8 +419,8 @@
 		    font-size: 12px;
 		    position: absolute;
 		    color: #000000;
-		    top: 65px;
-		    right: 37px;
+		    top: 60px;
+		    right: 25px;
 		    font-weight: normal;
 	    }
 
