Mobile responsiveness changes

--- a/app/modules/chooseTeams/styles/chooseTeams.less
+++ b/app/modules/chooseTeams/styles/chooseTeams.less
@@ -31,7 +31,8 @@
 
 .choose-teams-container {
 	width: 850px;
-
+	margin: 0 auto;
+	
 	.choose-teams-carousel {
 	    margin: 0 auto;
 	    padding: 0px;
