--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -305,11 +305,10 @@
 }
 
 .divider-line {
-	width: 200vw;
+	width: 100%;
   border-bottom: 1px solid #cccccc;
   position: absolute;
   top: 58px;
-  left: -1000px;
 }
 
 .player-rating-info-icon {
