Remove welcome message; mobile responsiveness; minor style updatss

--- a/app/modules/chooseTeams/styles/chooseTeams.less
+++ b/app/modules/chooseTeams/styles/chooseTeams.less
@@ -23,8 +23,9 @@
     cursor: pointer;
     position: absolute;
     top: -11px;
-    margin-left: 54px;
-    padding: 12px;
+    margin-left: 45px;
+    padding: 11px 20px;
+    min-width: 190px;
     border-width: @button-border-width;
     border-color: #000000;
 }
@@ -37,7 +38,7 @@
 	    margin: 0 auto;
 	    padding: 0px;
 	    text-align: center;
-	    top: 84px;
+	    top: 138px;
 
 		.slick-dots {
 			bottom: 0px !important;
@@ -58,8 +59,8 @@
 
 	    	.choose-team-button {
 			    position: absolute;
-			    top: 12px;
-			    right: 20px;
+			    top: 8px;
+			    right: 14px;
 			    font-size: 14px;
 			    font-weight: 600;
 			    font-family: sans-serif;
