--- a/app/modules/chooseTeams/views/chooseTeams.html
+++ b/app/modules/chooseTeams/views/chooseTeams.html
@@ -13,12 +13,6 @@
 <div ng-if="!gameInProgress" class="choose-teams-container">
 	<player-info-modal class="player-info-modal-container" id="playerInfoChooseTeams"></player-info-modal>
 
-	<!-- WELCOME -->
-	<div class="app-welcome">
-	 	Welcome to <span class="emphasize-bold">LeagueHut Baseball</span>!<br>
-	 	Check out the teams and set your matchup by selecting two of them.
-	</div>
-
 	<!-- CHOSEN TEAMS -->
 	<div class="chosen-teams" ng-show="chosenTeams.length">
 	 	<div class="team-{{chosenTeams[0].id}}-font team-name-small" ng-class="{'special-team-name-small': (chosenTeams[0].id === 8)}">
@@ -33,7 +27,7 @@
 	 		<svg-icon svg-url="'x_icon'" class="chosen-teams-x-icon" ng-click="removeChosenTeam(1, chosenTeams[1].id)"></svg-icon>
 	 	</div>
 
-	 	<button ng-show="(chosenTeams.length === 2)" class="play-ball-button" ng-click="startGame()">Play Ball!</button>
+	 	<button ng-show="(chosenTeams.length === 2)" class="play-ball-button" ng-click="startGame()">PLAY BALL!</button>
 	 	<div class="divider-line"></div>
 	</div>
 
@@ -43,7 +37,7 @@
 			<h1 class="team-name team-{{team.id}}-font">
 				{{::team.name}}
 
-				<button ng-disabled="teamChosen[team.id]" ng-click="chooseTeam(team.id, team.name)" class="choose-team-button" ng-class="{'disable-choose-team': teamChosen[team.id]}">Select Team</button>
+				<button ng-disabled="teamChosen[team.id]" ng-click="chooseTeam(team.id, team.name)" class="choose-team-button" ng-class="{'disable-choose-team': teamChosen[team.id]}">SELECT TEAM</button>
 			</h1>
 
 			<!-- PLAYER GRAPHIC, POSITIONED ON BACKGROUND FIELD ACCORDINGLY -->
