--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -14,7 +14,7 @@
 	color: @team-1-primary-color;
 	text-shadow: 2px 1px @team-1-secondary-color;
 	letter-spacing: 13px !important;
-    margin-top: -22px !important;
+    margin-top: -19px !important;
     margin-left: 39px;
 }
 .secondary-color-background-1 {
@@ -77,7 +77,7 @@
 	font-family: 'team4Font';
 	color: @team-4-primary-color;
 	text-shadow: 2px 1px @team-4-secondary-color;
-	margin-top: 9px !important;
+	margin-top: 22px !important;
 	margin-left: 12px;
 	letter-spacing: 20px !important;
 }
@@ -99,10 +99,12 @@
 }
 .team-5-font {
 	font-family: 'team5Font';
+	font-size: 54px !important;
 	color: @team-5-primary-color;
 	text-shadow: 2px 1px @team-5-secondary-color;
 	letter-spacing: 23px !important;
 	margin-left: 48px;
+	margin-top: 6px !important;
 }
 .secondary-color-background-5 {
 	background-color: @team-5-secondary-color;
@@ -123,7 +125,7 @@
 	font-family: 'team6Font';
 	color: @team-6-primary-color;
 	text-shadow: 2px 1px @team-6-secondary-color;
-	margin-top: 8px !important;
+	margin-top: 14px !important;
 	margin-left: 17px;
 }
 .secondary-color-background-6 {
@@ -146,7 +148,7 @@
 	color: @team-7-primary-color;
 	text-shadow: 2px 1px @team-7-secondary-color;
 	font-size: 77px !important;
-	margin-top: -15px !important;
+	margin-top: 1px !important;
 }
 .secondary-color-background-7 {
 	background-color: @team-7-secondary-color;
@@ -169,6 +171,7 @@
 	text-shadow: 2px 1px @team-8-secondary-color;
 	font-size: 128px !important;
 	margin-left: 28px;
+	margin-top: 6px !important;
 }
 .secondary-color-background-8 {
 	background-color: @team-8-secondary-color;
@@ -226,14 +229,6 @@
 	margin: 0px !important;
 }
 
-.app-welcome {
-	margin-top: 17px;
-    font-size: 23px;
-    font-family: sans-serif;
-    color: #444444;
-    text-align: center;	
-}
-
 .emphasize-bold {
 	font-weight: 600;
 }
@@ -285,7 +280,7 @@
 
 .chosen-teams {
 	position: absolute;
-	top: 87px;
+	top: 72px;
 	width: @app-width;
 	text-align: center;
 
@@ -359,7 +354,7 @@
 		position: absolute;
 		left: 0px;
     height: 114vh;//long enough to cover the entire slide so that nothing is clickable when modal is showing
-    width: @app-width;
+    width: 100vw;
     z-index: 3;
 
 	.player-info-modal {
