Hide select team button if team chosen

--- a/app/modules/chooseTeams/styles/chooseTeams.less
+++ b/app/modules/chooseTeams/styles/chooseTeams.less
@@ -77,9 +77,7 @@
 	    	}
 
 	    	.disable-choose-team {
-	    		background-color: #444444;
-	    		color: #999999;
-	    		cursor: not-allowed;
+	    		display: none;
 	    	}
 
 		    .toggle-bullpen {
