--- a/app/modules/chooseTeams/styles/chooseTeams.less
+++ b/app/modules/chooseTeams/styles/chooseTeams.less
@@ -31,8 +31,11 @@
 }
 
 .choose-teams-container {
+	height: 100vh;
 	width: 850px;
 	margin: 0 auto;
+	background: url('../img/baseball_field.png') no-repeat center 148px; 
+	background-size: contain;
 	
 	.choose-teams-carousel {
 	    margin: 0 auto;
@@ -47,7 +50,6 @@
 		.team-slide {
 			height: 767px;
 			position: relative;
-			background: url('../img/baseball_field.png') no-repeat center; 
 	    	background-size: 100% 90%;
 	    	cursor: grab;
 
@@ -266,28 +268,6 @@
 			.player-hidden {
 				display: none;
 			}
-		}
-
-		.team-slide:before {
-			content: "";
-			position: absolute;
-			z-index: 1;
-			top: 0px;
-			left: 0px;
-			width: @slide-fade-width;
-			height: 100%;
-			background-image : linear-gradient(to left, rgba(255,255,255, 0), rgba(255,255,255, 1) 90%);
-		}
-
-		.team-slide:after {
-			content: "";
-			position: absolute;
-			z-index: 1;
-			top: 0px;
-			right: 0px;
-			width: @slide-fade-width;
-			height: 100%;
-			background-image : linear-gradient(to right, rgba(255,255,255, 0), rgba(255,255,255, 1) 90%);
 		}
 	}
 }
