--- a/app/directives/views/playerInfoModal.html
+++ b/app/directives/views/playerInfoModal.html
@@ -3,7 +3,8 @@
  	<img ng-src="{{'img/team_cap_' + $ctrl.playerInfo.teamId + '.png'}}" class="player-cap">
 	<svg-icon icon-source="'player_head_' + $ctrl.playerInfo.playerId" class="player-headshot" id="playerInfoHeadshot"></svg-icon>
 	<div class="player-name secondary-color-background-{{$ctrl.playerInfo.teamId}}">{{$ctrl.playerInfo.playerName}}</div>
-	<div class="player-position">{{$ctrl.playerInfo.position}}</div>
+	<div ng-if="$ctrl.playerInfo.isPitcher" class="player-position">{{$ctrl.playerInfo.handedness}}HP</div>
+	<div ng-if="!$ctrl.playerInfo.isPitcher" class="player-position">{{$ctrl.playerInfo.position}}</div>
 	
 	<div class="pitcher-arsenal-percentages" ng-if="$ctrl.playerInfo.isPitcher">
 		% Thrown
